Production Plan gui

--- a/db.properties
+++ b/db.properties
@@ -12,7 +12,7 @@ hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 transaction.factory_class=org.hibernate.transaction.JDBCTransactionFactory
 current_session_context_class=thread
     hibernate.show_sql=false
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=none
 #hibernate.hbm2ddl.auto=none
 hibernate.connection.autocommit=true
 #hibernate.cache.use_query_cache=true
