--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,7 +40,8 @@ file.reference.cglib-2.2.jar=lib/cglib-2.2.jar
 file.reference.commons-codec-1.10.jar=lib/commons-codec-1.10.jar
 file.reference.commons-collections-3.1.jar=lib/commons-collections-3.1.jar
 file.reference.commons-collections4-4.1.jar=lib/commons-collections4-4.1.jar
-file.reference.commons-csv-1.7.jar=lib/commons-csv-1.7.jar
+file.reference.commons-csv-1.8-javadoc.jar=lib/commons-csv-1.8-javadoc.jar
+file.reference.commons-csv-1.8.jar=lib/commons-csv-1.8.jar
 file.reference.commons-net-3.6-sources.jar=lib/commons-net-3.6-sources.jar
 file.reference.commons-net-3.6.jar=lib/commons-net-3.6.jar
 file.reference.dom4j-1.6.1.jar=lib/dom4j-1.6.1.jar
@@ -191,7 +192,8 @@ javac.classpath=\
     ${file.reference.sign-7.0.8-sources.jar}:\
     ${file.reference.sign-7.0.8.jar}:\
     ${file.reference.opencsv-4.1.jar}:\
-    ${file.reference.commons-csv-1.7.jar}
+    ${file.reference.commons-csv-1.8-javadoc.jar}:\
+    ${file.reference.commons-csv-1.8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
