--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,6 +41,8 @@ file.reference.barcodes-7.0.8-sources.jar=lib/itext7/barcodes-7.0.8-sources.jar
 file.reference.barcodes-7.0.8.jar=lib/itext7/barcodes-7.0.8.jar
 file.reference.c3p0-0.9.1.jar=lib/c3p0-0.9.1.jar
 file.reference.cglib-2.2.jar=lib/cglib-2.2.jar
+file.reference.com.fasterxml.jackson.databind-2.10.0.LIFERAY-PATCHED-1.jar=lib/com.fasterxml.jackson.databind-2.10.0.LIFERAY-PATCHED-1.jar
+file.reference.commons-beanutils-1.9.4.jar=lib\\commons-beanutils-1.9.4.jar
 file.reference.commons-codec-1.10.jar=lib/commons-codec-1.10.jar
 file.reference.commons-collections-3.1.jar=lib/commons-collections-3.1.jar
 file.reference.commons-collections4-4.1.jar=lib/commons-collections4-4.1.jar
@@ -66,6 +68,8 @@ file.reference.io-7.0.8.jar=lib/itext7/io-7.0.8.jar
 file.reference.itextpdf-5.5.8-javadoc.jar=lib/itextpdf-5.5.8-javadoc.jar
 file.reference.itextpdf-5.5.8-sources.jar=lib/itextpdf-5.5.8-sources.jar
 file.reference.itextpdf-5.5.8.jar=lib/itextpdf-5.5.8.jar
+file.reference.jackson-annotations-2.10.3.jar=lib/jackson-annotations-2.10.3.jar
+file.reference.jackson-core-2.10.3.jar=lib/jackson-core-2.10.3.jar
 file.reference.javassist-3.12.0.GA.jar=lib/javassist-3.12.0.GA.jar
 file.reference.javax.mail.jar=lib/javax.mail.jar
 file.reference.jcl-over-slf4j-1.7.25.jar=lib/slf4j/jcl-over-slf4j-1.7.25.jar
@@ -197,7 +201,11 @@ javac.classpath=\
     ${file.reference.sign-7.0.8.jar}:\
     ${file.reference.opencsv-4.1.jar}:\
     ${file.reference.commons-csv-1.8-javadoc.jar}:\
-    ${file.reference.commons-csv-1.8.jar}
+    ${file.reference.commons-csv-1.8.jar}:\
+    ${file.reference.jackson-core-2.10.3.jar}:\
+    ${file.reference.com.fasterxml.jackson.databind-2.10.0.LIFERAY-PATCHED-1.jar}:\
+    ${file.reference.jackson-annotations-2.10.3.jar}:\
+    ${file.reference.commons-beanutils-1.9.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
