--- a/build.xml
+++ b/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="PGSystem_v2019_01" default="default" basedir=".">
-    <description>Builds, tests, and runs the project PGSystem_v2019_02.</description>
+<project name="ePack_v2.3" default="default" basedir=".">
+    <description>Builds, tests, and runs the project ePack_v2.3.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
