--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=-AXlint=deprecation
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.homepage=https://github.com/OUSSAMA-EZZIOURI/PGSystem_v2019_03
+application.homepage=https://github.com/OUSSAMA-EZZIOURI/ePack_v2020_03
 application.title=ePack_v2020_03
 application.vendor=Oussama EZZIOURI
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
@@ -31,7 +32,7 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/PGSystem_v2018_10_01.jar
+dist.jar=${dist.dir}/ePack_v2.3.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
@@ -208,7 +209,7 @@ javac.classpath=\
     ${file.reference.commons-beanutils-1.9.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
-javac.deprecation=false
+javac.deprecation=true
 javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
