--- a/db.properties
+++ b/db.properties
@@ -4,7 +4,7 @@
 #hibernate.connection.url=jdbc:postgresql://localhost:5432/leoni_cv_v03_2020
 #hibernate.connection.url=jdbc:postgresql://localhost:5432/leoni_cv_v20_03
 #hibernate.connection.url=jdbc:postgresql://localhost:5432/leoni_cv_v20_03_test1
-hibernate.connection.url=jdbc:postgresql://localhost:5432/leoni_cv_v20_03
+hibernate.connection.url=jdbc:postgresql://localhost:5432/leoni_cv_20_03_test4
 hibernate.connection.username=openpg
 hibernate.connection.password=openpgpwd
 hibernate.connection.driver_class=org.postgresql.Driver
