--- a/db.properties
+++ b/db.properties
@@ -1,10 +1,7 @@
 ################################################################################
 ############################### DATABASE PROPERTIES ############################
 ################################################################################
-#hibernate.connection.url=jdbc:postgresql://localhost:5432/leoni_cv_v03_2020
-#hibernate.connection.url=jdbc:postgresql://localhost:5432/leoni_cv_v20_03
-#hibernate.connection.url=jdbc:postgresql://localhost:5432/leoni_cv_v20_03_test1
-hibernate.connection.url=jdbc:postgresql://localhost:5432/leoni_cv_20_03_test4
+hibernate.connection.url=jdbc:postgresql://localhost:5433/leoni_cv_2021
 hibernate.connection.username=openpg
 hibernate.connection.password=openpgpwd
 hibernate.connection.driver_class=org.postgresql.Driver
